svg update and header alignment fixed

--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,23 @@
 .site-header {
-    background-color: black;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    background: black;
     color: white;
     position: sticky;
     top: 0;
-    padding: 0.5rem 1rem;
-    margin: 0;
-    display: flex;
-    align-items: center;
-}
+    height: 80px;
+  }
+  .header-left {
+    justify-self: start;
+  }
+  .hero-logo {
+    justify-self: center;
+  }
+  .header-nav {
+    justify-self: end;
+  }
 
 .site-header h1 {
     font-size: 2em;
@@ -29,11 +39,10 @@
 
 .hero-logo {
     color: white;
-    height: 100px; /* Adjust as needed */
+    height: 60px; /* Adjust as needed */
     margin: 0 1rem;
     display: flex;
     align-items: center;
-    overflow: hidden;
   }
   .hero-logo svg {
     height: 100%;
